# HLS-Blocks

boilerplate/: run_hls.sh
boilerplate/testbench/: testbench.md
headers/: rfnoc_hls.h  vitis_includes
rfnoc-adaptive_filter/: CMakeLists.txt  MANIFEST.md  README.md  notes.md
rfnoc-adaptive_filter/cmake/Modules/: adaptive_filterConfig.cmake
rfnoc-adaptive_filter/docs/: README.adaptive_filter
rfnoc-adaptive_filter/docs/doxygen/: Doxyfile.in
rfnoc-adaptive_filter/docs/doxygen/other/: group_defs.dox  main_page.dox
rfnoc-adaptive_filter/examples/: adaptive_filter.grc  lms.grc  nlms.grc
rfnoc-adaptive_filter/grc/: CMakeLists.txt  adaptive_filter.tree.yml  adaptive_filter_adaptive_filter.block.yml  adaptive_filter_lms.block.yml  adaptive_filter_nlms.block.yml
rfnoc-adaptive_filter/hls-srcs/lms/: lms_module.v  lms_module_add_113s_113s_113_2_1.v  lms_module_mul_64s_16s_79_3_1.v  lms_module_mul_64s_16s_80_3_1.v  lms_module_mul_80s_32ns_112_3_1.v  lms_module_mul_81s_32ns_112_3_1.v  lms_module_regslice_both.v
rfnoc-adaptive_filter/hls-srcs/lms/1tap/: lms_module_1tap.v  lms_module_1tap_add_113s_113s_113_2_1.v  lms_module_1tap_mul_64s_16s_79_3_1.v  lms_module_1tap_mul_64s_16s_80_3_1.v  lms_module_1tap_mul_80s_32ns_112_3_1.v  lms_module_1tap_mul_81s_32ns_112_3_1.v  lms_module_1tap_regslice_both.v
rfnoc-adaptive_filter/hls-srcs/lms/3tap/: lms_module_3tap.v  lms_module_3tap_add_113s_113s_113_2_1.v  lms_module_3tap_mul_64s_16s_79_3_1.v  lms_module_3tap_mul_64s_16s_80_3_1.v  lms_module_3tap_mul_80s_32ns_112_3_1.v  lms_module_3tap_mul_81s_32ns_112_3_1.v  lms_module_3tap_regslice_both.v
rfnoc-adaptive_filter/hls-srcs/nlms/: nlms_module.v  nlms_module_add_175s_175ns_175_2_1.v  nlms_module_filter_fix.v  nlms_module_mac_muladd_16s_16s_32s_32_4_1.v  nlms_module_mul_63ns_32ns_95_3_1.v  nlms_module_mul_64s_16s_79_3_1.v  nlms_module_mul_64s_16s_80_3_1.v  nlms_module_mul_95ns_80s_175_3_1.v  nlms_module_mul_95ns_81s_175_3_1.v  nlms_module_mul_mul_16s_16s_32_4_1.v  nlms_module_regslice_both.v  nlms_module_udiv_65s_64ns_64_69_1.v
rfnoc-adaptive_filter/hls-srcs/nlms/3tap/: nlms_module_3tap.v
rfnoc-adaptive_filter/include/adaptive_filter/: CMakeLists.txt  adaptive_filter.h  adaptive_filter_block_ctrl.hpp  api.h  lms.h  lms_block_ctrl.hpp  nlms.h  nlms_block_ctrl.hpp
rfnoc-adaptive_filter/lib/: CMakeLists.txt  adaptive_filter_block_ctrl_impl.cpp  adaptive_filter_impl.cc  adaptive_filter_impl.h  lms_block_ctrl_impl.cpp  lms_impl.cc  lms_impl.h  nlms_block_ctrl_impl.cpp  nlms_impl.cc  nlms_impl.h  qa_adaptive_filter.cc  qa_adaptive_filter.h  test_adaptive_filter.cc
rfnoc-adaptive_filter/python/: CMakeLists.txt  __init__.py
rfnoc-adaptive_filter/rfnoc/blocks/: adaptive_filter.yml  lms.yml  nlms.yml
rfnoc-adaptive_filter/rfnoc/fpga/rfnoc_block_adaptive_filter/: Makefile  Makefile.srcs  backup_rfnoc_tb.sv  noc_shell_adaptive_filter.v  rfnoc_block_adaptive_filter.v  rfnoc_block_adaptive_filter_tb.sv  run_exp.sh  test_tb.v  vivado_pid27352.str  vivado_pid30520.str
rfnoc-adaptive_filter/rfnoc/fpga/rfnoc_block_adaptive_filter/xsim_proj/: rfnoc_block_adaptive_filter_tb_behav.wcfg  rfnoc_block_adaptive_filter_tb_behav1.wcfg  rfnoc_block_adaptive_filter_tb_behav2.wcfg  xsim_proj.xpr
rfnoc-adaptive_filter/rfnoc/fpga/rfnoc_block_adaptive_filter/xsim_proj/xsim_proj.cache/sim/: ssm.db
rfnoc-adaptive_filter/rfnoc/fpga/rfnoc_block_adaptive_filter/xsim_proj/xsim_proj.cache/wt/: gui_handlers.wdf  java_command_handlers.wdf  webtalk_pa.xml
rfnoc-adaptive_filter/rfnoc/fpga/rfnoc_block_adaptive_filter/xsim_proj/xsim_proj.hw/: xsim_proj.lpr
rfnoc-adaptive_filter/rfnoc/fpga/rfnoc_block_adaptive_filter/xsim_proj/xsim_proj.sim/sim_1/behav/xsim/: compile.sh  elaborate.sh  rfnoc_block_adaptive_filter_tb_behav.wdb  rfnoc_block_adaptive_filter_tb_vhdl.prj  rfnoc_block_adaptive_filter_tb_vlog.prj  simulate.sh  webtalk.jou  webtalk_22034.backup.jou  webtalk_3755.backup.jou  webtalk_53056.backup.jou  webtalk_59004.backup.jou  webtalk_6091.backup.jou  xelab.pb  xvhdl.pb  (+1 more)
rfnoc-adaptive_filter/rfnoc/fpga/rfnoc_block_lms/: Makefile  Makefile.srcs  noc_shell_lms.v  rfnoc_block_lms.v  rfnoc_block_lms_tb.sv
rfnoc-adaptive_filter/rfnoc/fpga/rfnoc_block_nlms/: Makefile  Makefile.srcs  noc_shell_nlms.v  rfnoc_block_nlms.v  rfnoc_block_nlms_tb.sv
rfnoc-adaptive_filter/rfnoc/fpga/rfnoc_block_nlms/xsim_proj/: xsim_proj.xpr
rfnoc-adaptive_filter/rfnoc/fpga/rfnoc_block_nlms/xsim_proj/xsim_proj.cache/sim/: ssm.db
rfnoc-adaptive_filter/rfnoc/icores/: adaptive_filter_x310_rfnoc_image_core.yml  lms_x310_rfnoc_image_core.yml  nlms_x310_rfnoc_image_core.yml
rfnoc-adaptive_filter/swig/: CMakeLists.txt  adaptive_filter_swig.i
rfnoc-testmodule/: CMakeLists.txt  MANIFEST.md  README.md
rfnoc-testmodule/cmake/Modules/: testmoduleConfig.cmake
rfnoc-testmodule/docs/: README.testmodule
rfnoc-testmodule/docs/doxygen/: Doxyfile.in
rfnoc-testmodule/docs/doxygen/other/: group_defs.dox  main_page.dox
rfnoc-testmodule/examples/: testblock.grc
rfnoc-testmodule/grc/: CMakeLists.txt  testmodule.tree.yml  testmodule_testblock.block.yml
rfnoc-testmodule/include/testmodule/: CMakeLists.txt  api.h  testblock.h  testblock_block_ctrl.hpp
rfnoc-testmodule/lib/: CMakeLists.txt  qa_testmodule.cc  qa_testmodule.h  test_testmodule.cc  testblock_block_ctrl_impl.cpp  testblock_impl.cc  testblock_impl.h
rfnoc-testmodule/python/: CMakeLists.txt  __init__.py
rfnoc-testmodule/rfnoc/blocks/: testblock.yml
rfnoc-testmodule/rfnoc/fpga/rfnoc_block_testblock/: Makefile  Makefile.srcs  noc_shell_testblock.v  rfnoc_block_testblock.v  rfnoc_block_testblock_tb.sv  vivado.jou
rfnoc-testmodule/rfnoc/fpga/rfnoc_block_testblock/xsim_proj/: xsim_proj.xpr
rfnoc-testmodule/rfnoc/fpga/rfnoc_block_testblock/xsim_proj/xsim_proj.cache/sim/: ssm.db
rfnoc-testmodule/rfnoc/fpga/rfnoc_block_testblock/xsim_proj/xsim_proj.cache/wt/: gui_handlers.wdf  webtalk_pa.xml
rfnoc-testmodule/rfnoc/icores/: testblock_x310_rfnoc_image_core.yml  x310_rfnoc_image_core.v  x310_rfnoc_image_core.vh
rfnoc-testmodule/swig/: CMakeLists.txt  testmodule_swig.i
(+567 files in other folders)
